--- a/MyAPI/MyAPI.vcxproj
+++ b/MyAPI/MyAPI.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="MyAPI.h" />
     <ClInclude Include="MyApplication.h" />
+    <ClInclude Include="Room1.h" />
     <ClInclude Include="MyComponent.h" />
     <ClInclude Include="MyEngine.h" />
     <ClInclude Include="MyEntity.h" />
@@ -156,6 +157,7 @@
   <ItemGroup>
     <ClCompile Include="MyAPI.cpp" />
     <ClCompile Include="MyApplication.cpp" />
+    <ClCompile Include="Room1.cpp" />
     <ClCompile Include="MyComponent.cpp" />
     <ClCompile Include="MyEntity.cpp" />
     <ClCompile Include="MyGameObject.cpp" />
