--- a/MyAPI/MyAPI.vcxproj.filters
+++ b/MyAPI/MyAPI.vcxproj.filters
@@ -59,23 +59,20 @@
     <Filter Include="Contents\Scene\MyEndScene">
       <UniqueIdentifier>{688cac28-28be-40ff-bb6b-1090c2e34947}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Contents\Scene\MyPlayScene">
+    <Filter Include="Contents\Scene\MyStageScene">
       <UniqueIdentifier>{9d0d7c36-ee03-4167-8fb0-6596bc27e985}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Contents\Scene\MyPlayScene\MyStageScene">
-      <UniqueIdentifier>{bc596d72-e4a8-4797-9cd9-b57e3c3f14ad}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Contents\Scene\MyPlayScene\MyStageScene\Stage1">
+    <Filter Include="Contents\Scene\MyStageScene\Stage1">
       <UniqueIdentifier>{08623598-f76c-462c-987f-e25d91fb878f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Contents\Scene\MyPlayScene\MyStageScene\stage3">
-      <UniqueIdentifier>{c4944107-fb7c-4052-96d2-cb00ed43fdfc}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Contents\Scene\MyPlayScene\MyStageScene\stage2">
-      <UniqueIdentifier>{7fc9200e-4a50-485d-a1fc-e91d097434ad}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Contents\Scene\MyPlayScene\MyStageScene\Stage1\Room1">
+    <Filter Include="Contents\Scene\MyStageScene\Stage1\Room1">
       <UniqueIdentifier>{03375157-d416-470d-80c0-9d1e807f9282}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Component\Animation">
+      <UniqueIdentifier>{d68f183e-0b23-4b56-97bb-f149b71be598}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Component\Transform">
+      <UniqueIdentifier>{7c0f9a69-c98f-4323-868d-740bb16fdfce}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -140,17 +137,23 @@
       <Filter>Engine\Resource</Filter>
     </ClInclude>
     <ClInclude Include="MyImage.h" />
-    <ClInclude Include="MyTransform.h">
-      <Filter>Engine\Component</Filter>
-    </ClInclude>
     <ClInclude Include="MyTitleScene.h">
       <Filter>Contents\Scene\MyTitleScene</Filter>
     </ClInclude>
     <ClInclude Include="Room1.h">
-      <Filter>Contents\Scene\MyPlayScene\MyStageScene\Stage1</Filter>
+      <Filter>Contents\Scene\MyStageScene</Filter>
     </ClInclude>
     <ClInclude Include="MyPlayScene.h">
-      <Filter>Contents\Scene\MyPlayScene</Filter>
+      <Filter>Contents\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="MyTransform.h">
+      <Filter>Engine\Component\Transform</Filter>
+    </ClInclude>
+    <ClInclude Include="MyAnimator.h">
+      <Filter>Engine\Component\Animation</Filter>
+    </ClInclude>
+    <ClInclude Include="MyAnimation.h">
+      <Filter>Engine\Component\Animation</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -210,17 +213,23 @@
       <Filter>Engine\Resource</Filter>
     </ClCompile>
     <ClCompile Include="MyImage.cpp" />
-    <ClCompile Include="MyTransform.cpp">
-      <Filter>Engine\Component</Filter>
-    </ClCompile>
     <ClCompile Include="MyTitleScene.cpp">
       <Filter>Contents\Scene\MyTitleScene</Filter>
     </ClCompile>
     <ClCompile Include="Room1.cpp">
-      <Filter>Contents\Scene\MyPlayScene\MyStageScene\Stage1</Filter>
+      <Filter>Contents\Scene\MyStageScene</Filter>
     </ClCompile>
     <ClCompile Include="MyPlayScene.cpp">
-      <Filter>Contents\Scene\MyPlayScene</Filter>
+      <Filter>Contents\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="MyTransform.cpp">
+      <Filter>Engine\Component\Transform</Filter>
+    </ClCompile>
+    <ClCompile Include="MyAnimator.cpp">
+      <Filter>Engine\Component\Animation</Filter>
+    </ClCompile>
+    <ClCompile Include="MyAnimation.cpp">
+      <Filter>Engine\Component\Animation</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
