--- a/MyAPI/MyAPI.vcxproj
+++ b/MyAPI/MyAPI.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Room2.h" />
     <ClInclude Include="Stage1_2.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Ttitle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyAnimation.cpp" />
@@ -182,6 +183,7 @@
     <ClCompile Include="MyTransform.cpp" />
     <ClCompile Include="Room2.cpp" />
     <ClCompile Include="Stage1_2.cpp" />
+    <ClCompile Include="Ttitle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MyAPI.rc" />
