--- a/MyAPI/MyAPI.vcxproj
+++ b/MyAPI/MyAPI.vcxproj
@@ -134,6 +134,11 @@
     <ClInclude Include="MyAnimator.h" />
     <ClInclude Include="MyAPI.h" />
     <ClInclude Include="MyApplication.h" />
+    <ClInclude Include="MyCappy.h" />
+    <ClInclude Include="MyCollider.h" />
+    <ClInclude Include="MyCollisionManager.h" />
+    <ClInclude Include="MyTwizzy.h" />
+    <ClInclude Include="MyWaddle.h" />
     <ClInclude Include="Room1.h" />
     <ClInclude Include="MyComponent.h" />
     <ClInclude Include="MyEngine.h" />
@@ -155,15 +160,21 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="MyResources.h" />
     <ClInclude Include="Room2.h" />
+    <ClInclude Include="Stage1_1bk.h" />
     <ClInclude Include="Stage1_2.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Ttitle.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="MyCappy.cpp" />
+    <ClCompile Include="MyCollisionManager.cpp" />
     <ClCompile Include="MyAnimation.cpp" />
     <ClCompile Include="MyAnimator.cpp" />
     <ClCompile Include="MyAPI.cpp" />
     <ClCompile Include="MyApplication.cpp" />
+    <ClCompile Include="MyCollider.cpp" />
+    <ClCompile Include="MyTwizzy.cpp" />
+    <ClCompile Include="MyWaddle.cpp" />
     <ClCompile Include="Room1.cpp" />
     <ClCompile Include="MyComponent.cpp" />
     <ClCompile Include="MyEntity.cpp" />
@@ -182,6 +193,7 @@
     <ClCompile Include="MyTitleScene.cpp" />
     <ClCompile Include="MyTransform.cpp" />
     <ClCompile Include="Room2.cpp" />
+    <ClCompile Include="Stage1_1bk.cpp" />
     <ClCompile Include="Stage1_2.cpp" />
     <ClCompile Include="Ttitle.cpp" />
   </ItemGroup>
