--- a/MyAPI/MyAPI.vcxproj
+++ b/MyAPI/MyAPI.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="MyCappy.h" />
     <ClInclude Include="MyCollider.h" />
     <ClInclude Include="MyCollisionManager.h" />
+    <ClInclude Include="MyObject.h" />
     <ClInclude Include="MyTwizzy.h" />
     <ClInclude Include="MyWaddle.h" />
     <ClInclude Include="Room1.h" />
@@ -163,6 +164,7 @@
     <ClInclude Include="Room2.h" />
     <ClInclude Include="Stage1_1bk.h" />
     <ClInclude Include="Stage1_2.h" />
+    <ClInclude Include="Stage1_2bk.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Ttitle.h" />
   </ItemGroup>
@@ -197,6 +199,7 @@
     <ClCompile Include="Room2.cpp" />
     <ClCompile Include="Stage1_1bk.cpp" />
     <ClCompile Include="Stage1_2.cpp" />
+    <ClCompile Include="Stage1_2bk.cpp" />
     <ClCompile Include="Ttitle.cpp" />
   </ItemGroup>
   <ItemGroup>
