--- a/MyAPI/MyAPI.vcxproj
+++ b/MyAPI/MyAPI.vcxproj
@@ -140,6 +140,8 @@
     <ClInclude Include="MyCappy.h" />
     <ClInclude Include="MyCollider.h" />
     <ClInclude Include="MyCollisionManager.h" />
+    <ClInclude Include="MyfadeIn.h" />
+    <ClInclude Include="MyfadeOut.h" />
     <ClInclude Include="MyObject.h" />
     <ClInclude Include="MyTwizzy.h" />
     <ClInclude Include="MyWaddle.h" />
@@ -181,6 +183,8 @@
     <ClCompile Include="MyAPI.cpp" />
     <ClCompile Include="MyApplication.cpp" />
     <ClCompile Include="MyCollider.cpp" />
+    <ClCompile Include="MyfadeIn.cpp" />
+    <ClCompile Include="MyfadeOut.cpp" />
     <ClCompile Include="MyTwizzy.cpp" />
     <ClCompile Include="MyWaddle.cpp" />
     <ClCompile Include="Room1.cpp" />
