--- a/MyAPI/MyAPI.vcxproj.filters
+++ b/MyAPI/MyAPI.vcxproj.filters
@@ -98,6 +98,9 @@
     <Filter Include="Contents\Object">
       <UniqueIdentifier>{5567d1f6-f690-439f-97c2-2cd69c9fd85a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Contents\Effect\Air">
+      <UniqueIdentifier>{eb5ab93c-6f97-4530-8e6d-25855b111482}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -235,6 +238,12 @@
     <ClInclude Include="MyGround.h">
       <Filter>Contents\Object</Filter>
     </ClInclude>
+    <ClInclude Include="Air.h">
+      <Filter>Contents\Effect\Air</Filter>
+    </ClInclude>
+    <ClInclude Include="AirLeft.h">
+      <Filter>Contents\Effect\Air</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MyAPI.rc">
@@ -363,6 +372,12 @@
     </ClCompile>
     <ClCompile Include="MyGround.cpp">
       <Filter>Contents\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="Air.cpp">
+      <Filter>Contents\Effect\Air</Filter>
+    </ClCompile>
+    <ClCompile Include="AirLeft.cpp">
+      <Filter>Contents\Effect\Air</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
