--- a/MyAPI/MyAPI.vcxproj.filters
+++ b/MyAPI/MyAPI.vcxproj.filters
@@ -104,6 +104,12 @@
     <Filter Include="Contents\Object\Ground">
       <UniqueIdentifier>{b691a87c-11f3-47fb-8fb2-65e55b4480f4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Contents\Effect\StarShot">
+      <UniqueIdentifier>{e8f4b667-8609-4e7f-93ce-2307a3a5b13c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Contents\Object\Star">
+      <UniqueIdentifier>{d832ab79-5119-44ff-b304-544bba5e1000}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -244,7 +250,17 @@
     <ClInclude Include="AirLeft.h">
       <Filter>Contents\Effect\Air</Filter>
     </ClInclude>
-    <ClInclude Include="MyGround.h">
+    <ClInclude Include="R1Ground.h">
+      <Filter>Contents\Object\Ground</Filter>
+    </ClInclude>
+    <ClInclude Include="MyRectangle1.h" />
+    <ClInclude Include="Star.h">
+      <Filter>Contents\Effect\StarShot</Filter>
+    </ClInclude>
+    <ClInclude Include="StarMap.h">
+      <Filter>Contents\Object\Star</Filter>
+    </ClInclude>
+    <ClInclude Include="R2Ground.h">
       <Filter>Contents\Object\Ground</Filter>
     </ClInclude>
   </ItemGroup>
@@ -379,7 +395,17 @@
     <ClCompile Include="AirLeft.cpp">
       <Filter>Contents\Effect\Air</Filter>
     </ClCompile>
-    <ClCompile Include="MyGround.cpp">
+    <ClCompile Include="R1Ground.cpp">
+      <Filter>Contents\Object\Ground</Filter>
+    </ClCompile>
+    <ClCompile Include="MyRectangle1.cpp" />
+    <ClCompile Include="Star.cpp">
+      <Filter>Contents\Effect\StarShot</Filter>
+    </ClCompile>
+    <ClCompile Include="StarMap.cpp">
+      <Filter>Contents\Object\Star</Filter>
+    </ClCompile>
+    <ClCompile Include="R2Ground.cpp">
       <Filter>Contents\Object\Ground</Filter>
     </ClCompile>
   </ItemGroup>
